# pixi-playground

./: .gitignore  pyproject.toml
.github/workflows/: test.yaml
tests/: test_arrays.py
