[project]
authors = [{name = "Tiffany Le", email = "tiffanynle.cs@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "pixi-playground"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pixi_playground = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
