[project]
authors = [{ name = "Tiffany Le", email = "tiffanynle.cs@gmail.com" }]
dependencies = []
description = "Add a short description here"
name = "pixi-playground"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.0"

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.6.*"
pytorch-gpu = "*"

[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"

[tool.pixi.environments]
cpu = ["cpu"]
gpu = ["gpu"]
default = ["cpu"]

[tool.pixi.pypi-dependencies]
pixi_playground = { path = ".", editable = true }

[tool.pixi.tasks]
test = "pytest"

[tool.pixi.dependencies]
python = "3.11.*"
ruff = ">=0.9.9,<0.10"
pytest = ">=8.3.5,<9"
pytorch = ">=2.6.0,<3"
torchvision = ">=0.21.0,<0.22"
pytest-cov = ">=6.0.0,<7"
jax = ">=0.5.2,<0.6"
